src/test/ui/regions-fn-subtyping-return-static-fail.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter in generic type due to conflicting requirements
  --> $DIR/regions-fn-subtyping-return-static-fail.rs:48:12
   |
LL |     want_G(baz); //~ ERROR
   |            ^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U3, name: BrNamed(crate0:DefIndex(1:11), 'cx) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the expression is assignable:
           expected for<'cx> fn(&'cx S) -> &'static S
              found for<'r> fn(&'r S) -> &'r S

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
